--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html, body {
-  background-color: black;
+  background-color: transparent;
   margin: 0;
   padding: 0;
   justify-content: center;
@@ -8,3 +8,40 @@ html, body {
 canvas {
   display: block;
 }
+
+.center_box {
+  background-color: white;
+  width: 70%;
+  margin: auto;
+  margin-top: 100px;
+  border-radius: 10px;
+  text-align: center;
+  height: 500px;
+  padding: 5px;
+}
+
+
+.img_container {
+  display: flex;
+  width: 40%;
+  margin: left;
+  margin-left: 40px;
+  margin-top: 60px;
+  align-content: left;
+  float: left;
+}
+
+.more_text {
+  width: 50%;
+  margin: left;
+  float: left;
+  margin-left: 40px;
+  margin-top: 60px;
+  text-align: left;
+  padding: 10px;
+}
+
+hr {
+  width: 90%;
+}
+
